Fix: Ensure diagnostic section always displays and add fallback for no API calls
- Change condition from 'false' to '!= true' to catch all cases
- Add explicit fallback when no API calls found in logs
- Add clearer section headers for diagnostic information
- Better handling when bot hasn't started API calls yet

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -214,6 +214,11 @@ jobs:
             API_CONNECTED=false
             STATUS_CODE="No Response Yet"
             ERROR_MSG="API call initiated but no response logged yet - check logs"
+          else
+            # No API calls found in logs at all
+            API_CONNECTED=false
+            STATUS_CODE="Not Attempted Yet"
+            ERROR_MSG="No Cloudflare API calls found in logs - bot may not have started fetching data yet"
           fi
           
           # Print summary
