--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,11 @@ on:
       - 'internal/**'
       - 'go.mod'
       - 'go.sum'
+      - '.trigger'
   workflow_dispatch:
+  schedule:
+    # Run every 5 hours to ensure continuous operation (GitHub Actions has 6-hour limit)
+    - cron: '0 */5 * * *'
 
 permissions:
   contents: read
@@ -408,8 +412,47 @@ jobs:
         echo "=========================================="
         echo ""
         
-        # Infinite loop - keeps workflow alive forever
+        # Calculate restart time (5.5 hours = 330 minutes = 19800 seconds)
+        # GitHub Actions free tier has 6-hour limit, restart at 5.5 hours to be safe
+        RESTART_SECONDS=19800  # 5.5 hours
+        START_TIME=$(date +%s)
+        RESTART_TIME=$((START_TIME + RESTART_SECONDS))
+        
+        echo "⏰ Bot will auto-restart at $(date -d @$RESTART_TIME '+%Y-%m-%d %H:%M:%S UTC')"
+        echo "   (This is 5.5 hours from now to avoid GitHub Actions 6-hour limit)"
+        echo ""
+        
+        # Infinite loop - keeps workflow alive until restart time
         while true; do
+          CURRENT_TIME=$(date +%s)
+          TIME_UNTIL_RESTART=$((RESTART_TIME - CURRENT_TIME))
+          
+          # Check if it's time to restart (within 60 seconds of restart time)
+          if [ $TIME_UNTIL_RESTART -le 60 ]; then
+            echo ""
+            echo "=========================================="
+            echo "🔄 Auto-restarting workflow to avoid 6-hour limit"
+            echo "   Current time: $(date '+%Y-%m-%d %H:%M:%S UTC')"
+            echo "   Bot has been running for ~5.5 hours"
+            echo "=========================================="
+            echo ""
+            
+            # Trigger workflow restart by updating a trigger file
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            echo "$(date +%s)" > .trigger
+            git add .trigger
+            git commit -m "Auto-restart: Workflow restart before 6-hour limit" || true
+            git push || true
+            
+            # Give a moment for the push to complete
+            sleep 5
+            
+            echo "✅ Trigger file pushed. New workflow will start shortly."
+            echo "   This workflow will exit, and the new one will take over."
+            exit 0
+          fi
+          
           # Check if bot is still running
           if ! kill -0 $BOT_PID 2>/dev/null; then
             echo ""
@@ -423,7 +466,12 @@ jobs:
           fi
           
           # Show timestamp and status
-          echo "[$(date '+%Y-%m-%d %H:%M:%S UTC')] Check #$COUNTER - Bot alive (PID: $BOT_PID)"
+          HOURS_ELAPSED=$(( (CURRENT_TIME - START_TIME) / 3600 ))
+          MINUTES_ELAPSED=$(( ((CURRENT_TIME - START_TIME) % 3600) / 60 ))
+          HOURS_UNTIL_RESTART=$((TIME_UNTIL_RESTART / 3600))
+          MINUTES_UNTIL_RESTART=$(( (TIME_UNTIL_RESTART % 3600) / 60 ))
+          
+          echo "[$(date '+%Y-%m-%d %H:%M:%S UTC')] Check #$COUNTER - Bot alive (PID: $BOT_PID) | Running: ${HOURS_ELAPSED}h ${MINUTES_ELAPSED}m | Restart in: ${HOURS_UNTIL_RESTART}h ${MINUTES_UNTIL_RESTART}m"
           
           # Every 10 checks (50 minutes), show recent logs and Cloudflare status
           if [ $((COUNTER % 10)) -eq 0 ]; then
