Fix workflow permissions to enable auto-restart mechanism
- Changed permissions from 'contents: read' to 'contents: write'
- This allows the workflow to commit .trigger file after 5.5 hours
- Auto-restart will now work properly to keep bot running 24/7

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ on:
     - cron: '0 */5 * * *'
 
 permissions:
-  contents: read
+  contents: write  # Write permission needed to commit .trigger file for auto-restart
 
 jobs:
   run-bot:
