--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,15 +16,13 @@ on:
     - cron: '0 */5 * * *'   # Every 5 hours at :00 (00:00, 05:00, 10:00, 15:00, 20:00)
     - cron: '30 */5 * * *'  # Every 5 hours at :30 (00:30, 05:30, 10:30, 15:30, 20:30)
 
-# Concurrency control: Allow multiple instances to run simultaneously
-# This allows overlapping runs when cron triggers a new instance every 5.5 hours
-# Having two bots running at the same time is acceptable per user requirements
-concurrency:
-  group: netblocks-bot-24-7
-  cancel-in-progress: false  # Don't cancel existing runs, allow parallel execution
+# Concurrency control: Remove group restriction to allow parallel runs
+# Multiple bot instances can run simultaneously when auto-restart triggers new run
+# Note: Not using concurrency group allows instant parallel execution
 
 permissions:
-  contents: read  # Read-only permissions (no longer need to commit .trigger file)
+  contents: read  # Read-only permissions
+  actions: write  # Write permission needed to trigger workflow_dispatch via API
 
 jobs:
   run-bot:
@@ -417,26 +415,77 @@ jobs:
         echo "=========================================="
         echo ""
         echo "This workflow will run until GitHub Actions 6-hour limit."
-        echo "Cron will automatically start a new instance every 5.5 hours."
-        echo "To stop the bot: Cancel this workflow in GitHub Actions UI"
-        echo ""
-        echo "=========================================="
-        echo ""
-        echo "This workflow will run until GitHub Actions 6-hour limit."
-        echo "A new instance will be triggered by cron every 5.5 hours."
+        echo "A new instance will be auto-triggered at 5 hours 30 minutes."
         echo "Multiple bot instances may run simultaneously (this is acceptable)."
         echo ""
         echo "=========================================="
         echo ""
         
+        # Calculate restart time (5 hours 30 minutes = 330 minutes = 19800 seconds)
+        # GitHub Actions free tier has 6-hour limit, restart at 5h 30m to be safe
+        RESTART_SECONDS=19800  # 5 hours 30 minutes (330 minutes)
         START_TIME=$(date +%s)
+        RESTART_TIME=$((START_TIME + RESTART_SECONDS))
         
-        # Infinite loop - keeps workflow alive until GitHub Actions kills it (6-hour limit)
+        echo "⏰ Bot will auto-restart at $(date -d @$RESTART_TIME '+%Y-%m-%d %H:%M:%S UTC')"
+        echo "   (This is 5 hours 30 minutes from now to avoid GitHub Actions 6-hour limit)"
+        echo ""
+        
+        # Get repository and workflow info for API trigger
+        REPO_OWNER="Mehrrun"
+        REPO_NAME="netblocks"
+        WORKFLOW_FILE="deploy.yml"
+        API_URL="https://api.github.com/repos/${REPO_OWNER}/${REPO_NAME}/actions/workflows/${WORKFLOW_FILE}/dispatches"
+        
+        # Infinite loop - keeps workflow alive until restart time
         while true; do
           CURRENT_TIME=$(date +%s)
           ELAPSED=$((CURRENT_TIME - START_TIME))
+          TIME_UNTIL_RESTART=$((RESTART_TIME - CURRENT_TIME))
           HOURS_ELAPSED=$((ELAPSED / 3600))
           MINUTES_ELAPSED=$(( (ELAPSED % 3600) / 60 ))
+          HOURS_UNTIL_RESTART=$((TIME_UNTIL_RESTART / 3600))
+          MINUTES_UNTIL_RESTART=$(( (TIME_UNTIL_RESTART % 3600) / 60 ))
+          
+          # Check if it's time to restart (within 60 seconds of restart time)
+          if [ $TIME_UNTIL_RESTART -le 60 ]; then
+            echo ""
+            echo "=========================================="
+            echo "🔄 Auto-restarting workflow to avoid 6-hour limit"
+            echo "   Current time: $(date '+%Y-%m-%d %H:%M:%S UTC')"
+            echo "   Bot has been running for ~5 hours 30 minutes"
+            echo "=========================================="
+            echo ""
+            
+            # Trigger workflow restart via GitHub API (workflow_dispatch)
+            echo "📡 Triggering new workflow run via GitHub API..."
+            RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              "${API_URL}" \
+              -d '{"ref":"main"}' 2>&1)
+            
+            HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
+            RESPONSE_BODY=$(echo "$RESPONSE" | sed '$d')
+            
+            if [ "$HTTP_CODE" = "204" ]; then
+              echo "✅ New workflow run triggered successfully!"
+              echo "   A new bot instance will start shortly."
+              echo "   This instance will continue running until GitHub Actions 6-hour limit."
+              echo "   Multiple bot instances will overlap briefly (acceptable)."
+            else
+              echo "❌ Failed to trigger new workflow run"
+              echo "   HTTP Status: $HTTP_CODE"
+              echo "   Response: $RESPONSE_BODY"
+              echo "   The workflow will continue running until the 6-hour limit."
+            fi
+            
+            echo ""
+            echo "This workflow will continue running until GitHub Actions kills it."
+            echo "The new instance should already be starting."
+            echo ""
+          fi
           
           # Check if bot is still running
           if ! kill -0 $BOT_PID 2>/dev/null; then
@@ -451,7 +500,7 @@ jobs:
           fi
           
           # Show timestamp and status
-          echo "[$(date '+%Y-%m-%d %H:%M:%S UTC')] Check #$COUNTER - Bot alive (PID: $BOT_PID) | Running: ${HOURS_ELAPSED}h ${MINUTES_ELAPSED}m"
+          echo "[$(date '+%Y-%m-%d %H:%M:%S UTC')] Check #$COUNTER - Bot alive (PID: $BOT_PID) | Running: ${HOURS_ELAPSED}h ${MINUTES_ELAPSED}m | Restart in: ${HOURS_UNTIL_RESTART}h ${MINUTES_UNTIL_RESTART}m"
           
           # Every 10 checks (50 minutes), show recent logs and Cloudflare status
           if [ $((COUNTER % 10)) -eq 0 ]; then
